; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckQuickFloorWord.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_CheckQuickFloorWord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [149 x i8] c"\0AOOOPPSS! _cmsQuickFloorWord() does not work as expected in your machine!\0A\0APlease, edit lcms2mt.h and uncomment the CMS_DONT_USE_FAST_FLOOR toggle.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @CheckQuickFloorWord to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CheckQuickFloorWord() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %18, %0
  %4 = load i32, i32* %2, align 4
  %5 = icmp slt i32 %4, 65535
  br i1 %5, label %6, label %21

6:                                                ; preds = %3
  %7 = load i32, i32* %2, align 4
  %8 = sext i32 %7 to i64
  %9 = sitofp i64 %8 to double
  %10 = fadd double %9, 1.234000e-01
  %11 = fptosi double %10 to i64
  %12 = call i32 @_cmsQuickFloorWord(i64 %11)
  %13 = load i32, i32* %2, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %6
  %16 = call i32 @Die(i8* getelementptr inbounds ([149 x i8], [149 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %22

17:                                               ; preds = %6
  br label %18

18:                                               ; preds = %17
  %19 = load i32, i32* %2, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %2, align 4
  br label %3

21:                                               ; preds = %3
  store i32 1, i32* %1, align 4
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @_cmsQuickFloorWord(i64) #1

declare dso_local i32 @Die(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
